...
      mainAxisAlignment: MainAxisAlignment.center,
      children: [
        const SizedBox(height: 100),
        const Text(SIGN_IN, style: CustomTypography.h1),
        const SizedBox(height: 100),
        CustomInputField(
          key: const Key('login_page_email_field'),
          controller: emailController,
          labelText: EMAIL,
        ),
        const SizedBox(height: 20),
        CustomInputField(
          key: const Key('login_page_password_field'),
          controller: passwordController,
          obscureText: true,
          labelText: PASSWORD,
        ),
        const SizedBox(height: 20),
        CustomButton(
...
